--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="logo-container">
             <img src="Computer.png" alt="Logo" class="logo">
         </div>
+        <h1 class="title">Lớp 1</h1>
         <nav class="main-navigation">
             <ul>
                 <li><a href="#">Môn TV</a></li>
